syntax = "proto3";

option csharp_namespace = "GrpcGreeter.Protos";
import "Protos/common.proto";

package protos.accountCRUD;

service AccountCRUD {
  rpc GetAccounts (common.Empty) returns (Accounts);
  rpc GetByID (AccountFilter) returns (AccountResponse);
  rpc GetByUserID (AccountRequest) returns (AccountResponse);
  rpc Insert (Account) returns (common.Empty);
  rpc Update (Account) returns (common.Empty);
  rpc Delete (AccountFilter) returns (common.Empty);
}

message Account {
  string id = 1;
  double balance = 2;
  AccountType accountType = 3;
  string userId = 4;
}

message Accounts{
  repeated Account items = 1;
}

message AccountFilter{
  string id = 1;
  double balance = 2;
  AccountType accountType = 3;
  string userId = 4;
}

message AccountRequest{
  string userId = 1;
}

message AccountResponse{
  Account account = 1;
}

enum AccountType{
  CHECKING = 0;
  SAVING = 1;
}